# kognitive_automobile_labor_anicar

Anicar/additional_task_ros_tool/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
Anicar/additional_task_ros_tool/cfg/: RobotDetector.rosif
Anicar/additional_task_ros_tool/launch/: robot_detector_node.launch  robot_detector_nodelet.launch
Anicar/additional_task_ros_tool/launch/params/: robot_detector_parameters.yaml
Anicar/additional_task_ros_tool/src/robot_detector/: robot_detector.cpp  robot_detector.hpp  robot_detector_node.cpp  robot_detector_nodelet.cpp
Anicar/additional_task_ros_tool/test/: robot_detector_node.cpp  robot_detector_node.test  robot_detector_nodelet.cpp  robot_detector_nodelet.test
Anicar/anicar_lateral_control_ros_tool/cfg/: LateralController.params
Anicar/anicar_lateral_control_ros_tool/launch/params/: lateral_controller_parameters.yaml
Anicar/anicar_lateral_control_ros_tool/src/lateral_controller/: lateral_controller.cpp  lateral_controller.hpp  safe_iterator_operations.h
Anicar/anicar_longitudinal_control_ros_tool/cfg/: LongitudinalController.params
Anicar/anicar_longitudinal_control_ros_tool/src/longitudinal_controller/: longitudinal_controller.cpp  longitudinal_controller.hpp
Anicar/obstacle_detection_ros_tool/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
Anicar/obstacle_detection_ros_tool/cfg/: ObstacleDetection.rosif
Anicar/obstacle_detection_ros_tool/launch/: obstacle_detection_node.launch  obstacle_detection_nodelet.launch
Anicar/obstacle_detection_ros_tool/launch/params/: obstacle_detection_parameters.yaml
Anicar/obstacle_detection_ros_tool/src/obstacle_detection/: obstacle_detection.cpp  obstacle_detection.hpp  obstacle_detection_node.cpp  obstacle_detection_nodelet.cpp
Anicar/obstacle_detection_ros_tool/test/: obstacle_detection_node.cpp  obstacle_detection_node.test  obstacle_detection_nodelet.cpp  obstacle_detection_nodelet.test
Anicar/path_planner_ros_tool/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
Anicar/path_planner_ros_tool/cfg/: PathPlanner.rosif  StateMachine.rosif
Anicar/path_planner_ros_tool/launch/: path_planner_node.launch  path_planner_nodelet.launch  state_machine_additional_task.launch  state_machine_node.launch  state_machine_nodelet.launch
Anicar/path_planner_ros_tool/launch/params/: path_planner_parameters.yaml  state_machine_parameters.yaml
Anicar/path_planner_ros_tool/res/: before_goals.xml  block down.osm  block left.osm  block right.osm  block up.osm  block zebra.osm  costmap left out.osm  costmap right out.osm  goals.xml  leave_intersection.xml
Anicar/path_planner_ros_tool/src/path_planner/: Cell.cpp  Cell.h  Dsl.cpp  Dsl.h  Map.cpp  Map.h  Math.cpp  Math.h  path_planner.cpp  path_planner.hpp  path_planner_node.cpp  path_planner_nodelet.cpp
Anicar/path_planner_ros_tool/src/state_machine/: state_machine.cpp  state_machine.hpp  state_machine_node.cpp  state_machine_nodelet.cpp
Anicar/path_planner_ros_tool/test/: path_planner_node.cpp  path_planner_node.test  path_planner_nodelet.cpp  path_planner_nodelet.test  state_machine_node.cpp  state_machine_node.test  state_machine_nodelet.cpp  state_machine_nodelet.test
Anicar/sign_detection_ros_tool/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
Anicar/sign_detection_ros_tool/cfg/: SignDetection.rosif
Anicar/sign_detection_ros_tool/launch/: sign_detection_node.launch  sign_detection_nodelet.launch
Anicar/sign_detection_ros_tool/launch/params/: sign_detection_parameters.yaml
Anicar/sign_detection_ros_tool/src/sign_detection/: sign_detection.cpp  sign_detection.hpp  sign_detection_node.cpp
Anicar/sign_detection_ros_tool/test/: sign_detection_node.cpp  sign_detection_node.test  sign_detection_nodelet.cpp  sign_detection_nodelet.test
